--- a/slides/styles.scss
+++ b/slides/styles.scss
@@ -34,3 +34,12 @@ $--r-heading-margin: 6px 0 0 0;
   margin-bottom: 0.25em !important;
   font-size: 1.25em !important;
 }
+
+.reveal blockquote {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+blockquote > p {
+  line-height: 2em !important;
+}
